[package]
name = "async-rustls"
version = "0.3.0"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "quininer kel <quininer@live.com>",
  "John Nunley <jtnunley01@gmail.com>",
]
license = "MIT/Apache-2.0"
repository = "https://github.com/smol-rs/async-rustls"
homepage = "https://github.com/smol-rs/async-rustls"
documentation = "https://docs.rs/async-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2018"

[dependencies]
futures-io = "0.3.24"
rustls = { version = "0.20", default-features = false }
webpki = "0.22"

[features]
default = ["logging", "tls12"]
dangerous_configuration = ["rustls/dangerous_configuration"]
early-data = []
logging = ["rustls/logging"]
tls12 = ["rustls/tls12"]
quic = ["rustls/quic"]

[dev-dependencies]
smol = "1.0"
futures-util = "0.3.1"
lazy_static = "1"
webpki-roots = "0.22"
rustls-pemfile = "1"
once_cell = "1.14.0"
